css file storage and result function done

--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -12,14 +12,16 @@
         <button id="score-container">Score: 0</button>        
         
         <div id="questions-container">
-            <div id="question" class="question">
+            <div id="question">
                 <h4 id="title"></h4>
-                <div id="answers" class="answers"></div> 
+                <div id="answers"></div> 
             </div>
         </div>
-        <div id="resultat">
-            <div id="score"></div>
-            <div id="againButton"></div>
+
+        <div id="resultat-container">
+            <div id="resultat">
+                <div id="score"></div>
+            </div>
         </div>
         
     </div>
