--- a/public/css/styles_quizz.css
+++ b/public/css/styles_quizz.css
@@ -1,79 +1,95 @@
 /*
   styles-quizz.css
 */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-#questions-container {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(3, max-content);
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-  }
-    
-  #score-container {
-    position: sticky;
-    right: 40px;
-    top: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-    background: rgb(13, 110, 221);
-    padding: 10px 15px;
-    min-width: 100px;
-    min-height: 45px;
-    border-radius: 10px;
-  }
-    
-  #app-title {
-    padding-top: 2rem;
-    margin-top: 0;
-    margin-bottom: 40px;
-    margin: 0 0 40px 20px;
-    text-align: center;
-    font-weight: bold;
-  }
-  
-  .question {
-    background-color: white;
-  }
-    
-  .popup {
-    display: none;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 550px;
-    height: max-content;
-    z-index: 1000;
-    transition: all 400ms ease-out;
-  }
-  
-  .popup.active {
-    display: inline-block;
-  }
-  
-  .popup.fadeout {
-    opacity: 0;
-    transform: all 250ms ease-out 500ms;
-  }
-  
-  #start-btn {
-    position: sticky;
-    right: 40px;
-    top: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-    background: green;
-    padding: 10px 15px;
-    min-width: 100px;
-    min-height: 45px;
-    border-radius: 10px;
-  }
+#questions-container, #resultat-container {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(3, max-content);
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+#question, #resultat {
+  position: relative;
+  width: 500px;
+  height: 100%;
+  min-width: 500px;
+  min-height: max-content;
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  border: 1px solid rgba(13, 110, 221, 0.712);
+  border-radius: 10px;
+  background-color: white;
+}
+
+#answers, #score {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 15px 20px;
+  margin-bottom: 20px;
+}
+
+.answer {
+  border: none;
+  font-size: 18px;
+  background: none;
+  padding: 10px 5px;
+  border: 1px solid rgba(13, 110, 221, 0.712);
+  outline: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.answer:hover {
+  background: rgba(13, 110, 221, 0.712);
+  color: white;
+  transition: all 200ms ease-out;
+}
+ 
+#title {
+  padding-top: 1rem;
+  margin-bottom: 40px;
+  text-align: center;
+}
+     
+#start-btn, #score-container, #againButton {
+  position: sticky;
+  right: 40px;
+  top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  padding: 10px 15px;
+  min-width: 100px;
+  min-height: 45px;
+  border-radius: 10px;
+}
+
+#start-btn{
+  background: green;
+}
+ 
+#score-container {
+  background: rgb(13, 110, 221);
+}
+
+#againButton{
+  background: rgb(225,224,174);
+}
+
+#inputAgain{
+  color: black;
+  border: none;
+  background-color:rgb(225,224,174) ;
+}
