--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -86,14 +86,17 @@
                     </div>
                 </div>
             </div>
+            <div class="col" >   
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
                         <h5 class="card-title">Liste des Acteurs</h5>
                         <a href="{{ path('app_backoffice_actors_browse') }}" class="btn btn-success">voir</a>
                     </div>
                 </div>
-            </div> 
+            </div>
     </div>
 </div>
 
-    </main>
+</main>
 
 {% endblock %}
