--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -70,7 +70,13 @@
 
             <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Favoris</a>
-            </li>       
+            </li>
+
+            {% if is_granted("ROLE_USER") %}
+            <li class="nav-item">
+            <a class="nav-link {{ (app.request.get('_route') is same as('app_add_quote')) ? 'active' : '' }}" aria-current="page" href="{{ path("app_add_quote") }}">Proposer une citation</a>
+            </li>   
+            {% endif %}    
 
         </ul>
         <form class="d-flex" role="search">
