--- a/templates/frontoffice/personage/read.html.twig
+++ b/templates/frontoffice/personage/read.html.twig
@@ -46,7 +46,7 @@
 
                 {% for quote in character.quotes %}
 
-                {% include '_card_quote.html.twig' %}
+                {# {% include 'partials/_card_quote.html.twig' %} #}
 
                 {% endfor %}
 
