--- a/templates/frontoffice/quote/index.html.twig
+++ b/templates/frontoffice/quote/index.html.twig
@@ -13,7 +13,7 @@
     <div class="col-lg-8">
 
         {% for quote in pagination %}
-        {% include '_card_quote.html.twig' %}
+        {% include 'partials/_card_quote.html.twig' %}
         {% endfor %}
 
     </div>
