--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -4,11 +4,11 @@
 
 {% block body %}
 
-<main class="main">
+<main class="main p-3">
 
     <h2 class="main__item">Kaamel'O'tt {{ quizz.title }}</h2>
     <div id="app-container">
-        <button id="start-btn">Start</button>
+        <div id="start">Start</div>
         <button id="score-container">Score: 0</button>        
         
         <div id="questions-container">
@@ -21,6 +21,7 @@
         <div id="resultat-container">
             <div id="resultat">
                 <div id="score"></div>
+                <div id="again"></div>
             </div>
         </div>
         
