--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -12,9 +12,9 @@
         <button id="score-container">Score: 0</button>        
         
         <div id="questions-container">
-            <div id="question" class="question">
+            <div id="question" >
                 <h4 id="title"></h4>
-                <div id="answers" class="answers"></div> 
+                <div id="answers" ></div> 
             </div>
         </div>
         <div id="resultat">
