--- a/templates/backoffice/quote/_delete_form.html.twig
+++ b/templates/backoffice/quote/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_backoffice_quote_delete', {'id': quote.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_backoffice_quote_delete', {'id': quote.id}) }}" onsubmit="return confirm('Etes-vous sûr ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ quote.id) }}">
     <button class="btn btn-danger">Supprimer</button>
 </form>
