--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -45,7 +45,7 @@
             </li>
 
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle {{ (app.request.get('_route') starts with 'app_frontoffice_season_read') ? 'active' : '' }}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Saisons
             </a>
             <ul class="dropdown-menu">
