--- a/templates/frontoffice/quote/index.html.twig
+++ b/templates/frontoffice/quote/index.html.twig
@@ -13,7 +13,70 @@
     <div class="col-lg-8">
 
         {% for quote in pagination %}
-        {% include 'partials/_card_quote.html.twig' %}
+        <div class="card mb-3">
+    <div class="card-header d-flex justify-content-end">
+
+        <div class="d-flex" style="color: orange;">
+            {% set rating = quote.rating %}
+                    {# round(0,'floor') give the round number whith zero decimal so it give us the number of the full stars #}
+                    {% set biStarFill = rating|round(0, 'floor') %}
+                    {# if rating is a float between an integer+0.5 and the next integer "biStarHalf" #}
+                    {% set biStarHalf = rating - biStarFill >= 0.5 %}
+                    {% set biStar = 5 - biStarFill - (biStarHalf ? 1 : 0) %}
+                    {# {% dump(biStarFill)%}
+                    {% dump(biStarHalf)%}
+                    {% dump(biStar)%} #}
+                    {% for i in 1..5 %}
+                        {% if i <= biStarFill %}
+                            {{ '<i class="bi bi-star-fill"></i>' }}
+                        {% elseif i == biStarFill + 1 and biStarHalf %}
+                            {{ '<i class="bi bi-star-half"></i>' }}
+                        {% else %}
+                            {{ '<i class="bi bi-star"></i>' }}
+                        {% endif %}
+                    {% endfor %}
+            <span class="ps-1">{{ quote.rating }}</span>
+        </div>
+
+    </div>
+
+    <div class="card-body">
+    
+        <blockquote class="blockquote mb-0">
+            <p>"{{ quote.text }}"</p> 
+                <div>
+                {# We check if the user is connected, because if not, he can't put quotes in favorite #}
+                {% if is_granted("ROLE_USER") %}
+                 {% dump(quote.users) %}
+                 {% dump(quote.id) %}
+                 {% set isFavorite = false %}
+                    {% for userFav in quote.users %}
+                   
+                            {% if user == userFav %}
+                         blabla {% set isFavorite = true %}
+                            {# {% else %}
+                            blop {% set isFavorite = false %} #}
+                             {% endif %}
+                    {% endfor %}
+                  
+                        
+                    {% if isFavorite %}
+                    {# <i class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></i>  #}
+                       <a href="{{ path('user_remove_favorite_quote', {quoteId: quote.id}) }}"  class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></a>
+                    {% else %}
+                       <a href="{{ path('user_add_favorite_quote', {quoteId: quote.id}) }}" class="bi bi-bookmark-heart fs-1 d-flex justify-content-end"></a>
+                    {% endif %}
+
+                  
+                {% endif %}
+                </div>
+            
+            <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
+            
+        </blockquote>
+    </div>
+</div>
+        {# {% include 'partials/_card_quote.html.twig' %} #}
         {% endfor %}
 
     </div>
