--- a/templates/frontoffice/quote/index.html.twig
+++ b/templates/frontoffice/quote/index.html.twig
@@ -47,21 +47,14 @@
                 <div>
                 {# We check if the user is connected, because if not, he can't put quotes in favorite #}
                 {% if is_granted("ROLE_USER") %}
-                 {% dump(quote.users) %}
-                 {% dump(quote.id) %}
-                 {% set isFavorite = false %}
+                                {% set isFavorite = false %}
                     {% for userFav in quote.users %}
-                   
                             {% if user == userFav %}
-                         blabla {% set isFavorite = true %}
-                            {# {% else %}
-                            blop {% set isFavorite = false %} #}
+                                {% set isFavorite = true %}
                              {% endif %}
                     {% endfor %}
-                  
-                        
+                     
                     {% if isFavorite %}
-                    {# <i class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></i>  #}
                        <a href="{{ path('user_remove_favorite_quote', {quoteId: quote.id}) }}"  class="bi bi-bookmark-heart-fill fs-1 d-flex justify-content-end"></a>
                     {% else %}
                        <a href="{{ path('user_add_favorite_quote', {quoteId: quote.id}) }}" class="bi bi-bookmark-heart fs-1 d-flex justify-content-end"></a>
