--- a/templates/backoffice/quote/browse.html.twig
+++ b/templates/backoffice/quote/browse.html.twig
@@ -24,7 +24,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for quote in validatedFalse %}
+        {% for quote in validatedTrue %}
             <tr>
                 <td>{{ quote.id }}</td>
                 <td>{{ quote.text|slice(0, 150) }} [...]</td>
@@ -45,7 +45,7 @@
     </table>
 
     </div>
- {{ knp_pagination_render(validatedFalse) }}
+ {{ knp_pagination_render(validatedTrue) }}
 </main>
     
 {% endblock %}
