--- a/templates/backoffice/quote/toValidate.html.twig
+++ b/templates/backoffice/quote/toValidate.html.twig
@@ -22,7 +22,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for quote in validatedTrue %}
+        {% for quote in validatedFalse %}
             <tr>
                 <td>{{ quote.id }}</td>
                 <td>{{ quote.text|slice(0, 150) }} [...]</td>
@@ -45,7 +45,7 @@
     </table>
 
     </div>
- {{ knp_pagination_render(validatedTrue) }}
+ {{ knp_pagination_render(validatedFalse) }}
 </main>
     
 {% endblock %}
