--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -80,7 +80,7 @@
 
         </ul>
         <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="Rechercher..." aria-label="Search">
             <button class="btn" type="submit"><img src="{{ asset('img/loupe.png') }}" alt="search-icon" width="24" height="24"></button>
         </form>
         </div>
