color button quizz ok

--- a/public/css/styles_quizz.css
+++ b/public/css/styles_quizz.css
@@ -115,8 +115,8 @@
 
   #againButton {
       
-    color:black;
-    background: rgb(225, 224, 174);
+    color:white;
+    background:#6C757D;
     
   }
 
