try test url api

--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -8,7 +8,7 @@
 
     <h2 class="main__item">Kaamel'O'tt {{ quizz.title }}</h2>
     <div id="app-container">
-        <div id="start">Start</div>
+        <div id="start"></div>
         <button id="score-container">Score: 0</button>        
         
         <div id="questions-container">
