css forms backoffice and login user ok

--- a/public/css/styles_back.css
+++ b/public/css/styles_back.css
@@ -18,11 +18,36 @@ h1, h2, h3, h4, h5, h6, .title {
     padding-bottom: 2rem;
 }
 
+.main {
+    margin: 0 20px ;    
+}
+
+.main-bo {
+    padding: 2rem 10rem 2rem 10rem;
+    display:flex;
+    justify-content: space-around;
+    
+}
+
 .container {
     /* ? j'ai rajouté le margin top pour avoir le même retrait en haut que l'on a en bas car pas réussi à virer le bas */
     margin-top: 20px;
-    padding:  0;
+    padding:  1rem;
     background-color: rgba(240, 248, 255, 0.5);
+}
+
+.form_position{
+    display:flex;
+    justify-content: center;
+}
+
+.form_size{
+    padding:1rem;
+    width: 80%; 
+}
+
+.btn{
+    margin-bottom:0.5rem;
 }
 
 .navbar {
@@ -40,8 +65,14 @@ h1, h2, h3, h4, h5, h6, .title {
     background-color: rgba(243, 245, 245, 0.6);
 }
 
-.main {
-    margin: 0 20px ;    
+
+.searchLinks {
+   
+    color:midnightblue;
+}
+
+.searchLinks:hover {
+    color: brown;
 }
 
 footer {
@@ -67,6 +98,7 @@ footer > a:hover {
 } 
 
 
+
 @media screen and (max-width: 375px) {
     
     footer  {
@@ -74,19 +106,5 @@ footer > a:hover {
     }
 }
 
-.main-bo {
-    padding: 2rem 10rem 2rem 10rem;
-    display:flex;
-    justify-content: space-around;
-    
-}
 
-.searchLinks {
-   
-    color:midnightblue;
-}
-
-.searchLinks:hover {
-    color: brown;
-}
 
