--- a/templates/backoffice/actor/edit.html.twig
+++ b/templates/backoffice/actor/edit.html.twig
@@ -13,7 +13,7 @@
 
     <a href="{{ path('app_backoffice_actors_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
-    {{ include('backoffice/actor/_form.html.twig', {'button_label': 'Modifier'}) }}
+    {{ include('backoffice/actor/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
 
     </div>
 </main>
