--- a/templates/backoffice/avatar/_form.html.twig
+++ b/templates/backoffice/avatar/_form.html.twig
@@ -1,5 +1,9 @@
+<div class="form_position">
+<div class= "form_size">
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn btn-success">{{ button_label|default('Valider') }}</button> 
     
 {{ form_end(form) }}
+</div>
+</div>
