--- a/templates/backoffice/personage/edit.html.twig
+++ b/templates/backoffice/personage/edit.html.twig
@@ -11,7 +11,7 @@
     <div class="container  ">
     <a href="{{ path('app_backoffice_personage_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
-    {{ include('backoffice/personage/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('backoffice/personage/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
 
     </div>
 </main>  
