--- a/templates/backoffice/user/edit.html.twig
+++ b/templates/backoffice/user/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <main>
     <div class="main-content">
-        <h1>Modification Utilisteur {{ user.email }}</h1>
+        <h1>Modification Utilisateur {{ user.email }}</h1>
     </div>
     <div class="container  ">
         <a href="{{ path('app_backoffice_user_browse') }}" class="btn btn-primary">Retour à la liste</a>
