--- a/templates/backoffice/author/edit.html.twig
+++ b/templates/backoffice/author/edit.html.twig
@@ -12,10 +12,10 @@
     <div class="container">
     <a href="{{ path('app_backoffice_author_browse') }}" class="btn btn-primary">retour à la liste</a>
 
-    {{ include('backoffice/author/_form.html.twig', {'button_label': 'Modifier'}) }}
+    {{ include('backoffice/author/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
 
     
-    {{ include('backoffice/author/_delete_form.html.twig') }}
+    
 
     </div>
 </main>
