--- a/templates/backoffice/episode/edit.html.twig
+++ b/templates/backoffice/episode/edit.html.twig
@@ -13,10 +13,10 @@
 
     <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">retour à la liste</a>
 
-    {{ include('backoffice/episode/_form.html.twig', {'button_label': 'Modifier'}) }}
+    {{ include('backoffice/episode/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
 
     
-    {{ include('backoffice/episode/_delete_form.html.twig') }}
+
 
     </div>
 </main>  
