--- a/templates/backoffice/quote/edit.html.twig
+++ b/templates/backoffice/quote/edit.html.twig
@@ -12,8 +12,8 @@
      <div class="container  ">
 
       <a href="{{ path('app_backoffice_quote_browse') }}" class="btn btn-primary">Retour à la liste</a>
-
-      {{ include('backoffice/quote/_form.html.twig', {'button_label': 'Update'}) }}
+    
+      {{ include('backoffice/quote/_form.html.twig', {'button_label': 'Valider les modifications'}) }}
 
      </div>
 </main>
