--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,11 +10,13 @@
 
     {% if app.user %}
     
-        <div class="mb-3">
-            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
+        <div class="mb-3 login_on">
+            <p>Vous êtes connecté en tant que {{ app.user.userIdentifier }}  ,   <a href="{{ path('app_logout') }}" class="deconnection">Déconnexion</a></p>
         </div>
-    {% endif %}
+    {% else %}
 
+    <div class="login_position">
+    <div class="login_size">
     <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
@@ -24,6 +26,16 @@
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
+
+    <button class="btn btn-lg btn-secondary loginBtn" type="submit">
+        Valider
+    </button>
+
+    </div>
+    </div>
+
+    {% endif %}
+
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -36,8 +48,6 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Valider
-    </button>
+    
 </form>
 {% endblock %}
