--- a/templates/frontoffice/home/addQuote.html.twig
+++ b/templates/frontoffice/home/addQuote.html.twig
@@ -11,13 +11,18 @@
 
     <div class="container">
 
-        <a href="{{ path('default') }}" class="btn btn-primary">Retour à l'accueil</a>
+        <div class="addQuote_position">
+            <div class="addQuote_size">
 
-        {{ form_start(form) }}
-            {{ form_widget(form) }}
-            <button class="btn btn-success">{{ button_label|default('Valider') }}</button> 
-        {{ form_end(form) }}
+            <a href="{{ path('default') }}" class="btn btn-secondary addQuoteBtn">Retour à l'accueil</a>
 
+            {{ form_start(form) }}
+                {{ form_widget(form) }}
+                <button class="btn btn-success">{{ button_label|default('Valider') }}</button> 
+            {{ form_end(form) }}
+
+            </div>
+        </div>
     </div>
 
 </main>    
