quizz with centered score

--- a/public/css/styles_quizz.css
+++ b/public/css/styles_quizz.css
@@ -11,7 +11,6 @@
 
 
 
-
 #questions-container, #resultat-container {
  
   display: grid;
@@ -21,7 +20,10 @@
   padding-top: 1rem;
 }
 
-
+.score_position{
+  display:flex;
+  justify-content: center;
+}
 
 #question, #resultat {
 
