--- a/templates/backoffice/author/browse.html.twig
+++ b/templates/backoffice/author/browse.html.twig
@@ -10,7 +10,7 @@
         <h1>Liste des Auteurs</h1>
     </div>
 
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_author_add') }}" class="btn btn-primary" >Ajouter un auteur</a>
 
 
