--- a/templates/backoffice/author/read.html.twig
+++ b/templates/backoffice/author/read.html.twig
@@ -10,7 +10,7 @@
 
     </div>
 
-    <div class="container  ">
+    <div class="content">
     <a href="{{ path('app_backoffice_author_browse') }}" class="btn btn-primary">retour à la liste</a>
         <table class="table table-striped">
             <tbody>
