--- a/templates/backoffice/avatar/browse.html.twig
+++ b/templates/backoffice/avatar/browse.html.twig
@@ -9,7 +9,7 @@
         <h1>Liste des Avatars</h1>
     </div>
     
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_avatar_add') }}" class="btn btn-primary" >Ajouter un avatar</a>
 
         <table class="table table-striped">
