--- a/templates/backoffice/episode/add.html.twig
+++ b/templates/backoffice/episode/add.html.twig
@@ -7,7 +7,7 @@
     <div class="main-content">
         <h1>Créer un nouvel épisode</h1>
     </div>  
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">retour à la liste</a>
         {{ include('backoffice/episode/_form.html.twig') }}
     </div>
