--- a/templates/backoffice/main/home.html.twig
+++ b/templates/backoffice/main/home.html.twig
@@ -10,7 +10,7 @@
         <h1>Bienvenue sur le Backoffice Kaamel'O'tt</h1>
     </div>
 
-    <div class="container  ">
+    <div class="content">
 
         <div class="row gy-5 main-bo row-cols-3 justify-content-start">
             <div class="col" >
