--- a/templates/backoffice/personage/add.html.twig
+++ b/templates/backoffice/personage/add.html.twig
@@ -8,7 +8,7 @@
     <div class="main-content">
          <h1>Créer un nouveau personnage</h1>
     </div>
-     <div class="container  ">
+     <div class="content">
     <a href="{{ path('app_backoffice_personage_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('backoffice/personage/_form.html.twig') }}
