--- a/templates/backoffice/personage/browse.html.twig
+++ b/templates/backoffice/personage/browse.html.twig
@@ -9,7 +9,7 @@
     <h1>Liste des personnages</h1>
     </div>
 
-     <div class="container  ">
+     <div class="content">
     <a href="{{ path('app_backoffice_personage_add') }}"class="btn btn-primary">Créer un nouveau personnage</a>
 
     <table class="table table-striped">
