--- a/templates/backoffice/personage/read.html.twig
+++ b/templates/backoffice/personage/read.html.twig
@@ -9,7 +9,7 @@
     <h1>Fiche personnage</h1>
     </div>
 
-     <div class="container  ">
+     <div class="content">
     <a href="{{ path('app_backoffice_personage_browse') }}"class="btn btn-primary">Retour à la liste</a>
 
     <table class="table">
