--- a/templates/backoffice/question/browse.html.twig
+++ b/templates/backoffice/question/browse.html.twig
@@ -8,7 +8,7 @@
     <div class="main-content">
         <h1>Liste des Questions</h1>
     </div>
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_question_add') }}" class="btn btn-primary">Ajouter une question</a>
         <table class="table table-striped">
             <thead>
