--- a/templates/backoffice/question/read.html.twig
+++ b/templates/backoffice/question/read.html.twig
@@ -8,7 +8,7 @@
         <h1>Question</h1>
     </div>
 
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_question_browse') }}" class="btn btn-primary">Retour à la liste</a>
         <table class="table table-striped">
             <thead>
