--- a/templates/backoffice/quote/add.html.twig
+++ b/templates/backoffice/quote/add.html.twig
@@ -9,7 +9,7 @@
         <h1>Créer une nouvelle citation</h1>
     </div>
 
-     <div class="container  ">
+     <div class="content">
         <div class="contain">
             <a href="{{ path('app_backoffice_quote_browse') }}" class="btn btn-primary">Retour à la liste</a>
     
