--- a/templates/backoffice/quote/read.html.twig
+++ b/templates/backoffice/quote/read.html.twig
@@ -9,7 +9,7 @@
     <h1>Fiche de citation</h1>
     </div>
 
-     <div class="container  ">
+     <div class="content">
 
     <a href="{{ path('app_backoffice_quote_browse') }}"class="btn btn-primary">Retour à la liste</a>
 
