--- a/templates/backoffice/season/read.html.twig
+++ b/templates/backoffice/season/read.html.twig
@@ -10,7 +10,7 @@
         <h1>SAISON {{ season.id }}</h1>
     </div>
 
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_season_browse') }}" class="btn btn-primary">Retour à la liste</a>
         <table class="table table-striped">
             <thead>
