--- a/templates/backoffice/user/add.html.twig
+++ b/templates/backoffice/user/add.html.twig
@@ -7,7 +7,7 @@
     <div class="main-content">
         <h1>Créer un nouvel utilisateur</h1>
     </div>
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_user_browse') }}" class="btn btn-primary">Retour à la liste</a>
         
         {{ include('backoffice/user/_form.html.twig') }}
