--- a/templates/frontoffice/quizz/read.html.twig
+++ b/templates/frontoffice/quizz/read.html.twig
@@ -9,8 +9,9 @@
     <h2 class="main__item">Kaamel'O'tt {{ quizz.title }}</h2>
     <div id="app-container">
         <div id="start">Start</div>
+        <div class="score_position">
         <button id="score-container">Score: 0</button>        
-        
+        </div>
         <div id="questions-container">
             <div id="question">
                 <h4 id="title"></h4>
