--- a/templates/backoffice/actor/add.html.twig
+++ b/templates/backoffice/actor/add.html.twig
@@ -8,7 +8,7 @@
         <h1>Créer un nouvel acteur</h1>
     </div>
 
-    <div class="container">
+    <div class="content">
 
     <a href="{{ path('app_backoffice_actors_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
