--- a/templates/backoffice/actor/browse.html.twig
+++ b/templates/backoffice/actor/browse.html.twig
@@ -8,7 +8,7 @@
         <h1>Liste des acteurs</h1>
     </div>
 
-    <div class="container">
+    <div class="content">
 
     <a href="{{ path('app_backoffice_actor_add') }}" class="btn btn-primary">Créer un nouvel acteur</a>
 
