--- a/templates/backoffice/avatar/add.html.twig
+++ b/templates/backoffice/avatar/add.html.twig
@@ -9,7 +9,7 @@
         <h1>Créer un nouvel Avatar</h1>
     </div>
     
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_avatar_browse') }}" class="btn btn-primary">Retour à la liste</a>
   
         {{ include('backoffice/avatar/_form.html.twig') }}
