--- a/templates/backoffice/avatar/read.html.twig
+++ b/templates/backoffice/avatar/read.html.twig
@@ -9,7 +9,7 @@
         <h1>Avatars</h1>
     </div>
     
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_avatar_browse') }}" class="btn btn-primary">Retour à la liste</a>
     <table class="table table-striped">
         <tbody>
