--- a/templates/backoffice/episode/browse.html.twig
+++ b/templates/backoffice/episode/browse.html.twig
@@ -10,7 +10,7 @@
         <h1>Liste des Episodes</h1>
     </div>
 
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_episode_add') }}" class="btn btn-primary" >Ajouter un épisode</a>
 
         <table class="table table-striped">
