--- a/templates/backoffice/episode/edit.html.twig
+++ b/templates/backoffice/episode/edit.html.twig
@@ -9,7 +9,7 @@
     <h1>Modifier un épisode</h1>
     </div>
 
-    <div class="container">
+    <div class="content">
 
     <a href="{{ path('app_backoffice_episode_browse') }}" class="btn btn-primary">retour à la liste</a>
 
