--- a/templates/backoffice/question/add.html.twig
+++ b/templates/backoffice/question/add.html.twig
@@ -7,7 +7,7 @@
     <div class="main-content">
         <h1>Créer une nouvelle question</h1>
     </div>
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_question_browse') }}" class="btn btn-primary">retour à la liste</a>
         
         {{ include('backoffice/question/_form.html.twig') }}
