--- a/templates/backoffice/quizz/browse.html.twig
+++ b/templates/backoffice/quizz/browse.html.twig
@@ -8,7 +8,7 @@
         <h1>Liste des quizz</h1>
     </div>
 
-    <div class="container">
+    <div class="content">
 
     <a href="{{ path('app_backoffice_quizz_add') }}" class="btn btn-primary">Créer un nouveau quizz</a>
 
