--- a/templates/backoffice/quizz/edit.html.twig
+++ b/templates/backoffice/quizz/edit.html.twig
@@ -9,7 +9,7 @@
         <h1>Modifier un quizz</h1>
     </div>
 
-    <div class="container">
+    <div class="content">
 
     <a href="{{ path('app_backoffice_quizz_browse') }}" class="btn btn-primary">Retour à la liste</a>
 
