--- a/templates/backoffice/quote/browse.html.twig
+++ b/templates/backoffice/quote/browse.html.twig
@@ -9,7 +9,7 @@
         <h1>Liste des citations</h1>
     </div>
 
-     <div class="container">
+     <div class="content">
 
         <a href="{{ path('app_backoffice_quote_add') }}"class="btn btn-primary">Créer une nouvelle citation</a>
 
