--- a/templates/backoffice/quote/toValidate.html.twig
+++ b/templates/backoffice/quote/toValidate.html.twig
@@ -9,7 +9,7 @@
         <h1>Liste des citations</h1>
     </div>
 
-     <div class="container">
+     <div class="content">
 
     <table class="table table-striped">
         <thead>
