--- a/templates/backoffice/search/index.html.twig
+++ b/templates/backoffice/search/index.html.twig
@@ -8,7 +8,7 @@
     <h1>Résultats de " {{ search }} " classés par nom du personnage</h1>
     </div>
 
-     <div class="container  ">
+     <div class="content">
      <a href="{{ path('app_backoffice_home') }}" class="btn btn-primary">Retour à l'accueil</a>
 
     <table class="table table-striped">
