--- a/templates/backoffice/season/add.html.twig
+++ b/templates/backoffice/season/add.html.twig
@@ -7,7 +7,7 @@
     <div class="main-content">
         <h1>Créer une nouvelle saison</h1>
     </div>  
-    <div class="container  ">
+    <div class="content">
     <a href="{{ path('app_backoffice_season_browse') }}" class="btn btn-primary">retour à la liste</a>
 
     {{ include('backoffice/season/_form.html.twig') }}
