--- a/templates/backoffice/season/browse.html.twig
+++ b/templates/backoffice/season/browse.html.twig
@@ -10,7 +10,7 @@
         <h1>Liste des Saisons</h1>
     </div>
 
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_season_add') }}" class="btn btn-primary" >Ajouter une saison</a>
 
         <table class="table table-striped">
