--- a/templates/backoffice/user/browse.html.twig
+++ b/templates/backoffice/user/browse.html.twig
@@ -7,7 +7,7 @@
     <div class="main-content">
         <h1>Liste des Utilisateurs</h1>
     </div>
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_user_add') }}" class="btn btn-primary">Ajouter un utilisateur</a>
         <table class="table table-striped">
             <thead>
