--- a/templates/backoffice/user/read.html.twig
+++ b/templates/backoffice/user/read.html.twig
@@ -7,7 +7,7 @@
     <div class="main-content">
         <h1>Utilisateur</h1>
     </div>
-    <div class="container  ">
+    <div class="content">
         <a href="{{ path('app_backoffice_user_browse') }}" class="btn btn-primary">Retour à la liste</a>
         <table class="table table-striped">
             <thead>
