--- a/templates/partials/_card_quote.html.twig
+++ b/templates/partials/_card_quote.html.twig
@@ -24,9 +24,9 @@
                         {% endif %}
                     {% endfor %}
             <span class="ps-1">{{ quote.rating }}</span>
-            <div class="d-flex mb-4">
-                        <a href="{{ path('user_add_rating_quote', {quoteId: quote.id})}}" class="btn btn-secondary">Donner une Note à la Citation</a>
-                    </div>
+           
+                        
+                 
         </div>
 
     </div>
@@ -36,6 +36,7 @@
         <blockquote class="blockquote mb-0">
             <p>"{{ quote.text }}"</p> 
                 <div>
+               
                 {# We check if the user is connected, because if not, he can't put quotes in favorite #}
                 {% if is_granted("ROLE_USER") %}
                                 {% set isFavorite = false %}
@@ -56,7 +57,7 @@
                 </div>
             
             <footer class="blockquote-footer"> {{ quote.personage.name }},<cite title="Source Title"> <strong>{{ quote.episode.season.title }}</strong>, {{ quote.episode.title }}.</cite></footer>
-            
+             <a href="{{ path('user_add_rating_quote', {quoteId: quote.id})}}" class="btn btn-outline-secondary d-flex justify-content-end">Donner une Note à la Citation</a>
         </blockquote>
     </div>
 </div>
