with comments on blocks in login form

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,14 +27,14 @@
            value="{{ csrf_token('authenticate') }}"
     > #}
 
-    <button class="btn btn-lg btn-secondary loginBtn" type="submit">
+   {#  <button class="btn btn-lg btn-secondary loginBtn" type="submit">
         Valider
     </button>
 
     </div>
     </div>
-
-    {% endif %}
+ #}
+    {# {% endif %} #}
 
 
     {#
