deconnection message ok

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -68,7 +68,7 @@
         <div class="mb-3">
             Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
-    {% endif %}
+    {% else %}
     <h2 class="main__item">Veuillez vous connecter</h2>
   
     <div class="card mt-3 mb-3"> 
@@ -91,7 +91,7 @@
     </button>
         </div>
     </div>
-
+  {% endif %}
 </main>
 
 </form>
