--- a/templates/frontoffice/user/edit.html.twig
+++ b/templates/frontoffice/user/edit.html.twig
@@ -13,7 +13,8 @@
     <div class="card mt-3 mb-3"> 
         <div class="card-body text-bg-secondary">
         {{ form_start(form) }}
-            {{ form_row(form.email, { 'attr': {'disabled':'disabled'}}) }}
+            {# find a better way to do this because you can still modify the email with the inspector #}
+            {{ form_row(form.email) }}
             
             {{ form_row(form.plainPassword) }}
                 <div class="text-start">
