--- a/templates/backoffice/episode/read.html.twig
+++ b/templates/backoffice/episode/read.html.twig
@@ -31,7 +31,10 @@
  
     <a href="{{ path('app_backoffice_episode_edit', {'id': episode.id}) }}" class="btn btn-warning">Modifier</a>
 
-    {{ include('backoffice/episode/_delete_form.html.twig') }}
+    {% if is_granted("ROLE_ADMIN") %}
+        {{ include('backoffice/episode/_delete_form.html.twig') }}
+     {% endif %}
+
     </div>
 </main>    
 {% endblock %}
