--- a/templates/backoffice/personage/read.html.twig
+++ b/templates/backoffice/personage/read.html.twig
@@ -41,7 +41,9 @@
 
     <a href="{{ path('app_backoffice_personage_edit', {'id': personage.id}) }}"class="btn btn-warning">Modifier</a>
 
-    {{ include('backoffice/personage/_delete_form.html.twig') }}
+    {% if is_granted("ROLE_ADMIN") %}
+        {{ include('backoffice/personage/_delete_form.html.twig') }}
+     {% endif %}
 
     </div>
 
