--- a/templates/backoffice/question/read.html.twig
+++ b/templates/backoffice/question/read.html.twig
@@ -34,7 +34,12 @@
                     <td>{{ question.goodAnswer }}</td>
                     <td>
                         <a href="{{ path('app_backoffice_question_edit', {'id': question.id}) }}" class="btn btn-warning">Modifier</a>
-                        {{ include('backoffice/question/_delete_form.html.twig') }}
+
+
+                        {% if is_granted("ROLE_ADMIN") %}
+                            {{ include('backoffice/question/_delete_form.html.twig') }}
+                         {% endif %}
+
                     </td>
                 </tr>  
             </tbody>
