--- a/templates/backoffice/quizz/read.html.twig
+++ b/templates/backoffice/quizz/read.html.twig
@@ -28,7 +28,9 @@
 
     <a href="{{ path('app_backoffice_quizz_edit', {'id': quizz.id}) }}" class="btn btn-warning">Modifier</a>
 
-    {{ include('backoffice/quizz/_delete_form.html.twig') }}
+    {% if is_granted("ROLE_ADMIN") %}
+        {{ include('backoffice/quizz/_delete_form.html.twig') }}
+    {% endif %}  
 
     </div>
 
