--- a/templates/backoffice/quote/read.html.twig
+++ b/templates/backoffice/quote/read.html.twig
@@ -42,7 +42,10 @@
 
     <a href="{{ path('app_backoffice_quote_edit', {'id': quote.id}) }}"class="btn btn-warning">Modifier</a>
 
-    {{ include('backoffice/quote/_delete_form.html.twig') }}
+    {% if is_granted("ROLE_ADMIN") %}
+        {{ include('backoffice/quote/_delete_form.html.twig') }}
+     {% endif %}
+
     </div>
 </main>   
 
