--- a/templates/backoffice/user/read.html.twig
+++ b/templates/backoffice/user/read.html.twig
@@ -26,10 +26,12 @@
                     <td>{{ user.email }}</td>
                     <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                     <td>{{ user.password }}</td>
-                    <td>
+                    <td> {% if is_granted("ROLE_ADMIN") %}
                         <a href="{{ path('app_backoffice_user_edit', {'id': user.id}) }}" class="btn btn-warning">Modifier</a>
 
-                        {{ include('backoffice/user/_delete_form.html.twig') }}
+                       
+                            {{ include('backoffice/user/_delete_form.html.twig') }}
+                        {% endif %}
                     </td>
                 </tr>
             </tbody>
