--- a/templates/frontoffice/user/edit.html.twig
+++ b/templates/frontoffice/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kaamel'O'tt - Modification profil{% endblock %}
+{% block title %}Kaamel'O'tt - Modification{% endblock %}
 
 {% block body %}
 
